# mchat

./: README.md  pyproject.toml
.github/workflows/: build.yml
mchat/: __main__.py
